fix overflow in page top heading component

--- a/components/pageTopHeading.module.css
+++ b/components/pageTopHeading.module.css
@@ -1,6 +1,6 @@
 .parentDiv {
   position: relative;
-  width: 100vw;
+  width: 100%;
 }
 .imageDiv {
   position: absolute;
